allow interruption of process from repl per https://nrepl.org/nrepl/installation.html#jvmti